flux/manifests/02-infrastructure/cilium/namespace.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger.json
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-system
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
