flux/manifests/02-infrastructure/cilium/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
      sectionName: https
  hostnames:
    - hubble.k8s.apocrathia.com
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: cilium-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hubble
  namespace: cilium-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cilium-system
  to:
    - group: ""
      kind: Service
